Fix solution according to requirements
My initial solution didn't fit the font size
detailed in the requirements.

--- a/foundations/intro-to-css/01-css-methods/styles.css
+++ b/foundations/intro-to-css/01-css-methods/styles.css
@@ -2,7 +2,7 @@ div {
     background-color: red;
     text-align: center;
     color: white;
-    font-size: 30px;
-    font-weight: 600;
+    font-size: 32px;
+    font-weight: bold;
     font-family:'Times New Roman', Times, serif;
 }
